--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "@types/express": "^4.17.21",
     "expo": "~51.0.8",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -37,9 +40,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "ts-node": "^10.9.2",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
