--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -20,7 +20,9 @@
     "@react-navigation/native": "^6.0.2",
     "@types/express": "^4.17.21",
     "expo": "~51.0.8",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -29,6 +31,7 @@
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -37,9 +40,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "ts-node": "^10.9.2",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
