--- a/app.json
+++ b/app.json
@@ -7,36 +7,26 @@
     "icon": "./assets/images/icon.png",
     "scheme": "playtify",
     "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#000000"
-    },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-<<<<<<< HEAD
+        "foregroundImage": "./assets/images/playtifylogosolo.jpg",
         "backgroundColor": "#000000"
-      }
-=======
-        "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.gbsp"
->>>>>>> ariana
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router"
-    ],
-    "experiments": {
-      "typedRoutes": true
+      "package": "com.anonymous.playtify"
     }
+  },
+  "web": {
+    "bundler": "metro",
+    "output": "static",
+    "favicon": "./assets/images/favicon.png"
+  },
+  "plugins": [
+    "expo-router"
+  ],
+  "experiments": {
+    "typedRoutes": true
   }
 }
