--- a/app.json
+++ b/app.json
@@ -16,17 +16,22 @@
         "backgroundColor": "#000000"
       },
       "package": "com.anonymous.playtify"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1e12708a-4ceb-4995-9d6f-092037d21824"
+      }
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static"
+      // "favicon": ""
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "experiments": {
+      "typedRoutes": true
     }
-  },
-  "web": {
-    "bundler": "metro",
-    "output": "static",
-    "favicon": "./assets/images/favicon.png"
-  },
-  "plugins": [
-    "expo-router"
-  ],
-  "experiments": {
-    "typedRoutes": true
   }
 }
