--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/native": "^6.0.2",
     "@types/express": "^4.17.21",
     "expo": "^51.0.9",
