--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-super-grid": "^5.1.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "ts-node": "^10.9.2"
   },
@@ -50,6 +51,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
