--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "^2.7.6",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.3.29",
     "@types/express": "^4.17.21",
     "expo": "^51.0.9",
     "expo-auth-session": "~5.5.2",
