Created a more visually pleasing login page

--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/express": "^4.17.21",
-    "expo": "^51.0.9",
+    "expo": "~51.0.10",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.1",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.5",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
