--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "scheme": "playtify",
     "userInterfaceStyle": "automatic",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.example.playtify"
     },
     "android": {
       "adaptiveIcon": {
@@ -29,7 +30,6 @@
     "web": {
       "bundler": "metro",
       "output": "static"
-      // "favicon": ""
     },
     "plugins": [
       "expo-router"
