--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "playtify",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.jpg",
+    "icon": "./assets/images/icon.png",
     "scheme": "playtify",
     "userInterfaceStyle": "automatic",
     "ios": {
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/playtifylogosolo.jpg",
+        "foregroundImage": "./assets/images/playtifylogosolo.png",
         "backgroundColor": "#000000"
       },
       "package": "com.frost.playtify"
@@ -24,7 +24,7 @@
       }
     },
     "splash": {
-      "image": "./assets/images/splash.jpg",
+      "image": "./assets/images/splash.png",
       "backgroundColor": "#001229"
     },
     "web": {
