--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "playtify",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon-transparent.png",
     "scheme": "playtify",
     "userInterfaceStyle": "automatic",
     "ios": {
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/icon-transparent.png",
         "backgroundColor": "#000000"
       },
       "package": "com.frost.playtify"
